<resources>
    <string name="app_name">MaMange</string>
    <string name="si">Yes</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registrati">Sign up</string>
    <string name="crea">Create Group Order</string>
    <string name="unisciti">Join Group Order</string>
    <string name="accedi">Login</string>
    <string name="passconf">Confirm Password</string>
    <string name="passdimenticata">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="ospite">Guest</string>
    <string name="emailRichiestaErr">Email is required</string>
    <string name="passwordRichiestaErr">Password is required</string>
    <string name="passwordReset">Reset password?</string>
    <string name="emailLinkReset">We have sent a reset link in your email</string>
    <string name="emailLinkResetFailed">Error! Reset Link is Not Sent</string>
    <string name="emailValidaErr">Please provide valid email!</string>
    <string name="ottoCaratteriErr">Enter at least eight character</string>
    <string name="emailReset">Enter the email to get the password reset link</string>
    <string name="regolePassword">"Password Rule:\n" +
    "At least one capital letter\n" +
    "At least one number\n" +
    "At least one symbol"</string>
    <string name="stessaPassErr">Password does not coincide!</string>
    <string name="logout">Logout</string>
    <string name="cerca">Search a restaurant</string>
    <string name="aggiungi">Add to cart</string>
    <string name="inserisciCodice">Insert code</string>
    <string name="confermaOrdine">Confirm Order</string>
    <string name="scannerizza">Scan QR Code</string>
    <string name="scegliUsername">Choose your username</string>
    <string name="tavoloTrovato">Table found!</string>
    <string name="tavoloNonTrovato">Table not found!</string>
    <string name="oppure">or</string>
    <string name="username_nonvalido">Invalid Username! </string>
    <string name="username_nonvalido_descr">Enter a word from 1 to 10 characrters</string>
    <string name="piattoAggiunto">Plate added to your order!</string>
    <string name="bevandaAggiunta">Drink added to your order!</string>
    <string name="benvenuto">Welcome </string>
    <string name="scannerizzando">Scanning...</string>
    <string name="norisultati">No result</string>
    <string name="termina">Finish</string>
    <string name="massimoPiatti">You cannot add more than 10 dishes</string>
    <string name="piattoRimosso">The plate has been removed from your order</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="Menu">Menu</string>
    <string name="SingleOrder">Single Order</string>
    <string name="GroupOrder">Group Order</string>
    <string name="Confirm">Confirm</string>
    <string name="profile">Profile</string>
    <string name="ultimo_ordine">Insert last order</string>
    <string name="others">Others</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="codice_tavolo">Table Code</string>
    <string name="ordinazione">Order of </string>
    <string name="filename">lastOrder</string>
    <string name="ordineSalvato">Your order has been confirmed!</string>
    <string name="ordineCaricato">Your last order has been loaded!</string>
    <string name="ordineNonCaricato">There is no saved order!</string>
    <string name="acc_reg">Login to unlock</string>
    <string name="attenzione">Warning!</string>
    <string name="msgAttenzione">You are saving your order and you will no longer be able to modify it. Would you proceed?</string>
    <string name="inviatoCucina">Order sent to the kitchen</string>
    <string name="inviatoCucinaMsg">We have received your order and we are processing it</string>
    <string name="chiudi">Close</string>
    <string name="ConfSO">Order placed successfully! In the meantime, you can share your order or take a quiz!</string>
    <string name="inizioMessaggio">Hi! Look what I ordered with MaMangè:</string>
    <string name="condividi">Share</string>
    <string name="quiz">Quiz</string>
    <string name="selezionaOpzione">Select an option</string>
    <string name="prossimaDomanda">Next Question</string>
    <string name="fine">End</string>
    <string name="invia"> Send</string>
    <string name="domanda"> Question</string>
    <string name="vittoriaQuiz">Congratulations, you won a discount code!</string>
    <string name="sconfittaQuiz">Sorry, try again next time</string>
    <string name="ritenta">Try again next time</string>
    <string name="permessi">Permission Granted!</string>
    <string name="nessunPiatto">You haven\'t add any plate!</string>
    <string name="loggedIn">Logged in successfully!</string>
    <string name="loggedInFailed">Failed to login</string>
    <string name="registerAcepted">User has been registered successfully!</string>
    <string name="registerInFailed">Failed to register</string>
    <string name="inAscolto">Listening</string>
    <string name="connesso">Connected</string>
    <string name="connessioneFallita">Connection Failed</string>
    <string name="importanzaDeiPermessi">Importance of permissions</string>
    <string name="messaggioPermessi">Accept permissions to access this feature</string>
    <string name="richiestaPermessi">Accept permissions to access this feature. Do you want to accept the permissions?</string>
    <string name="scannerizzaQr">Scanning QRcode</string>
    <string name="lastOrderCaricamento">Delete the dishes you have already chosen to load the saved order</string>
    <string name="piattiDi"> plates of</string>
    <string name="Guest"> (Guest) </string>
    <string name="ispirazioneLastOrder">Are you looking for ideas? Click on _ and search for →insert last order← to load the dishes of the last order!</string>
    <string name="torbidita">Turbidity of the drink: </string>
    <string name="temperatura">Storage temperature:  </string>
    <string name="umidita">Storage humidity:  </string>
    <string name="connetti">Connect</string>
    <string name="associa">Pair</string>
    <string name="statoConnessione">Connection status</string>
    <string name="cosaFareAssociazione">In order to view the characteristics of this wine, pair your device with the Cantina Bluetooth device</string>
    <string name="adessoConnettiti">Now press the connect button and select the Cantina device</string>
    <string name="associazioneFallita">You have not paired with the Cantina device. To be able to view the characteristics of the wine first pair your device</string>
    <string name="riprova">Retry</string>
    <string name="annulla">Cancel</string>
    <string name="indietro">Back</string>
    <string name="soloxregi">For registered users only</string>
    <string name="uscire">Are you sure you want to quit the application?</string>
    <string name="uscireMsg">If you confirm, you will cancel your current order.</string>
    <string name="permessoMancante">Missing the following permissions: </string>
    <string name="question1">In which country is salmon caught the most?</string>
    <string name="question1option1">Finland</string>
    <string name="question1option2">Norway</string>
    <string name="question1option3">Japan</string>
    <string name="question2">Was sushi invented in?</string>
    <string name="question2option1">China</string>
    <string name="question2option2">Japan</string>
    <string name="question2option3">Thailand</string>
    <string name="question3">How do you eat sushi?</string>
    <string name="question3option1">Fork</string>
    <string name="question3option2">Chopsticks</string>
    <string name="question3option3">Table spoon</string>
    <string name="question4">What is ginger used for?</string>
    <string name="question4option1">Clean the palate</string>
    <string name="question4option2">Add flavor</string>
    <string name="question4option3">Embellishment</string>
    <string name="question5">What is sashimi?</string>
    <string name="question5option1">Fish without rice</string>
    <string name="question5option2">Rice without fish</string>
    <string name="question5option3">Rice with seaweed</string>
    <string name="question6">What fish does fogu come from?</string>
    <string name="question6option1">Puffer fish</string>
    <string name="question6option2">Dog fish</string>
    <string name="question6option3">Swordfish</string>
    <string name="question7">What does the word sashimi mean?</string>
    <string name="question7option1">Alcoholic beverage</string>
    <string name="question7option2">Rice roll</string>
    <string name="question7option3">Body pierced</string>
    <string name="question8">What is sake?</string>
    <string name="question8option1">Alcoholic beverage</string>
    <string name="question8option2">Salmon</string>
    <string name="question8option3">Flavor</string>
    <string name="question9">What is the green spice offered along with sushi?</string>
    <string name="question9option1">No one</string>
    <string name="question9option2">Saba</string>
    <string name="question9option3">Wasabi</string>
    <string name="question10">When preparing sushi rice. What is added to the rice?</string>
    <string name="question10option1">Soy sauce</string>
    <string name="question10option2">Vinegar</string>
    <string name="question10option3">Cayenne pepper</string>
    <string name="question11">Who originally popularized sushi?</string>
    <string name="question11option1">Sellers along the way</string>
    <string name="question11option2">Soldiers</string>
    <string name="question11option3">Royalty</string>
    <string name="question12">Guess the type of dish:</string>
    <string name="question12option1">Starter</string>
    <string name="question12option2">Dessert</string>
    <string name="question12option3">Fruit</string>
    <string name="question13">Guess the name of the dish</string>
    <string name="question13option1">Roll</string>
    <string name="question13option2">Hosomaki</string>
    <string name="question13option3">Temaki</string>
    <string name="question14option1">Gunkan</string>
    <string name="question14option2">Sashimi</string>
    <string name="question14option3">Gio Maguro</string>
    <string name="question15option1">Ghoan</string>
    <string name="question15option2">Tiger Roll</string>
    <string name="question15option3">Spicysamo</string>
    <string name="question16">What kind of cooking is it?</string>
    <string name="question16option1">Fried</string>
    <string name="question16option2">Tempura</string>
    <string name="question16option3">Grilled</string>
    <string name="question17option1">Roll</string>
    <string name="question17option2">Futomaki</string>
    <string name="question17option3">Nigiri</string>
    <string name="question18option1">Roll</string>
    <string name="question18option2">Temaki</string>
    <string name="question18option3">Gunkan</string>
    <string name="questionR">What is the name of the food?</string>
    <string name="next">Next</string>
    <string name="backhome">Return to inserting username</string>
    <string name="Invia">Submit</string>
    <string name="inserireValore">Please insert value</string>
    <string name="info">MaMange is an app that aims to be able to order in your favorite sushi restaurant with simplicity and speed, offering those who use it a certainty in ordering.</string>
    <string name="developers">Developers:</string>
    <string name="sendEmail">Send email to us</string>
    <string name="back">Presso to go back</string>
    <string name="connessione_assente">No internet connection</string>
    <string name="retry">RETRY</string>
    <string name="nordinazione">Table order: </string>
    <string name="shareW">Press to share your result</string>
</resources>