<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_profilo_utente"
        android:title="@string/profile"/>

    <item
        android:id="@+id/lastOrder"
        android:icon="@drawable/ic_ordine_ultimo"
        android:title="@string/ultimo_ordine"/>

    <item android:title="@string/others">

        <menu>

            <item
                android:id="@+id/Support"
                android:icon="@drawable/ic_support"
                android:title="@string/support"/>

            <item
                android:id="@+id/About"
                android:icon="@drawable/ic_about_us"
                android:title="@string/about_us"/>

        </menu>

    </item>
</menu>