<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SensorFragment">


    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logomamange" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/scheda_rotonda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8">


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="45dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/connetti"
                android:textColorHint="#c62828"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:cornerRadius="10dp"
                tools:layout_editor_absoluteX="206dp"
                tools:layout_editor_absoluteY="655dp" />

            <TextView
                android:id="@+id/descrizione"
                android:layout_width="199dp"
                android:layout_height="102dp"
                android:gravity="left"
                android:text="Descrizione"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="169dp"
                tools:layout_editor_absoluteY="60dp" />

            <ImageView
                android:id="@+id/imagePlate"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/white"
                tools:layout_editor_absoluteX="43dp"
                tools:layout_editor_absoluteY="77dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/umidita"
                android:layout_width="325dp"
                android:layout_height="60dp"
                android:text="@string/umidita"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="333dp" />

            <TextView
                android:id="@+id/statoConnessione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/statoConnessione"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/cosaFareBluetoothTW"
                android:layout_width="360dp"
                android:layout_height="87dp"
                android:padding="10dp"
                android:text="@string/cosaFareAssociazione"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="405dp" />

            <Button
                android:id="@+id/indietro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/indietro"
                android:textColorHint="#c62828"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:cornerRadius="10dp" />

            <TextView
                android:id="@+id/torbidita"
                android:layout_width="325dp"
                android:layout_height="60dp"
                android:gravity="left"
                android:text="@string/torbidita"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="264dp" />

            <TextView
                android:id="@+id/temperatura"
                android:layout_width="325dp"
                android:layout_height="60dp"
                android:gravity="left"
                android:text="@string/temperatura"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="188dp" />

            <TextView
                android:id="@+id/nomePiatto"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="NOME_PIATTO"
                android:textColor="@color/primaryTextColor"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/associa"
                android:textColorHint="#c62828"
                android:textSize="16sp"
                android:textStyle="bold"

                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="494dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
