<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    >


    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_alignParentBottom="true"


        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/white"
        android:hint="@string/conferma"
        android:textColorHint="#c62828"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toEndOf="@+id/insertQrCode"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/insertQrCode"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:hint="@string/inserisciCodice"
        android:minHeight="48dp"
        android:paddingVertical="10dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/scanQrCodeBtn"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_alignParentBottom="true"

        android:layout_centerInParent="true"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/white"
        android:hint="@string/scannerizza"
        android:textColorHint="#c62828"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_benvenuto"
        app:layout_constraintVertical_bias="0.716"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/logout"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_alignParentBottom="true"

        android:layout_centerInParent="true"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:backgroundTint="@color/white"
        android:hint="@string/logout"
        android:textColorHint="#c62828"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmBtn"
        app:layout_constraintVertical_bias="0.426"
        app:layout_constraintWidth_percent=".8" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="210dp"
        android:layout_height="189dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logonontrasparenteicona" />

    <TextView
        android:id="@+id/textView_benvenuto"
        android:layout_width="223dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />


</androidx.constraintlayout.widget.ConstraintLayout>